add bootstrap. don't laugh.

--- a/src/ui/routes/Bubbles/BubblesList.scss
+++ b/src/ui/routes/Bubbles/BubblesList.scss
@@ -21,7 +21,7 @@ $HEIGHT: 500px;
 .bubble-item {
   display: inline-block;
   vertical-align: top;
-  margin: 10px 50px;
+  margin: 10px 50px 100px 10px;
   width: $WIDTH;
   height: $HEIGHT;
 }
