--- a/src/ui/routes/Bubbles/svgBubble/SvgBubble.scss
+++ b/src/ui/routes/Bubbles/svgBubble/SvgBubble.scss
@@ -88,6 +88,7 @@
   // stroke: transparentize(#463838, 0.3);
   fill: #463838;
   cursor: pointer;
+  alignment-baseline: central;
 }
 
 .boringAccessPoint {
@@ -155,17 +156,3 @@
   animation-iteration-count: 1;
 }
 
-.accessPointConnector {
-  fill: none;
-  stroke: none;
-  stroke-dasharray: 1,4;
-  stroke-width: 1px;
-}
-
-.accessPointDot {
-  fill: transparentize(#aaa, 0.3);
-}
-
-.dot {
-  fill: inherit;
-}
