--- a/src/ui/routes/Bubbles/svgBubble/waypoint/RingWaypoint.stream.scss
+++ b/src/ui/routes/Bubbles/svgBubble/waypoint/RingWaypoint.stream.scss
@@ -2,7 +2,6 @@
 @import "src/ui/styles/_color";
 @import "./RingWaypoint";
 
-$HOVER_SPEED: 400ms;
 $TRIBUTARY_FONT_SIZE: 6px;
 $TRIBUTARY_HIGHLIGHT_FONT_SIZE: 14px;
 
@@ -15,11 +14,13 @@ $TRIBUTARY_HIGHLIGHT_FONT_SIZE: 14px;
   opacity: 0.5;
 }
 
+.tributaryWaypoint:focus .tributary,
 .tributaryWaypoint:hover .tributary {
   font-size: $TRIBUTARY_HIGHLIGHT_FONT_SIZE;
   opacity: 1.0;
-  animation: tributary-fade $HOVER_SPEED;
-  animation-iteration-count: 1;
+  animation: tributary-fade ($HOVER_SPEED * 4);
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 .tributaryConfluencePoint {
@@ -28,6 +29,7 @@ $TRIBUTARY_HIGHLIGHT_FONT_SIZE: 14px;
   stroke: none;
 }
 
+.tributaryWaypoint:focus .tributaryConfluencePoint,
 .tributaryWaypoint:hover .tributaryConfluencePoint {
   fill: $RAINBOW_TROUT;
   stroke-width: 1px;
@@ -40,12 +42,14 @@ $TRIBUTARY_HIGHLIGHT_FONT_SIZE: 14px;
   composes: label;
 }
 
+.tributaryWaypoint:focus .tributaryLabel
 .tributaryWaypoint:hover .tributaryLabel {
   fill: $DARK_HENDRICKSON;
   animation: label-fade $HOVER_SPEED;
   animation-iteration-count: 1;
 }
 
+.tributaryWaypoint:focus .tributaryLabelPoint,
 .tributaryWaypoint:hover .tributaryLabelPoint {
   fill: $COOL_WATER;
   animation: waypoint-fade $HOVER_SPEED;
@@ -81,6 +85,11 @@ $TRIBUTARY_HIGHLIGHT_FONT_SIZE: 14px;
   0% {
     font-size: $TRIBUTARY_FONT_SIZE;
     opacity: 0.5;
+  }
+
+  20% {
+    font-size: $TRIBUTARY_HIGHLIGHT_FONT_SIZE;
+    opacity: 1.0;
   }
 
   100% {
