--- a/src/ui/styles/_color.scss
+++ b/src/ui/styles/_color.scss
@@ -2,6 +2,7 @@ $BROWN_TROUT: #fccc14;
 $BROOK_TROUT: #acbb39;
 $RAINBOW_TROUT: #ce4e27;
 
+$DOUBLE_HAUL_WHITE: #fff;
 $OVERCAST: #dfdfdf;
 $PEWTER_LIGHT: #aaa;
 $PEWTER_LIGHTER: #bbb;
