support for counties, better public land estimates

--- a/src/ui/routes/streamList/StreamItem.style.scss
+++ b/src/ui/routes/streamList/StreamItem.style.scss
@@ -1,3 +1,5 @@
+@import "src/ui/styles/_color";
+
 .streamItemContainer {
   // display: flex;
   // flex: 1;
@@ -14,12 +16,17 @@
   overflow: visible !important;
 }
 
+.backdrop {
+  // fill: none; $LIGHT_WATER;
+  fill: none;
+}
+
 .section {
-  fill: #4e7f84;
+  fill: $COOL_WATER;
 }
 
 .public {
-  fill: #acbb39;
+  fill: $BROOK_TROUT;
 }
 
 .alert {
