--- a/src/ui/styles/_color.scss
+++ b/src/ui/styles/_color.scss
@@ -6,6 +6,7 @@ $DOUBLE_HAUL_WHITE: #fff;
 $OVERCAST: #dfdfdf;
 $PEWTER_LIGHT: #aaa;
 $PEWTER_LIGHTER: #bbb;
+$PEWTER_LIGHTEST: #ccc;
 
 $DARK_HENDRICKSON: #463838;
 
