--- a/src/ui/routes/streamList/StreamItem.style.scss
+++ b/src/ui/routes/streamList/StreamItem.style.scss
@@ -5,6 +5,21 @@
   // flex: 1;
 }
 
+.icon {
+  width: 1.2em;
+  height: 1.2em;
+  min-width: 1.2em;
+  display: inline-block;
+  margin: 0 0.1em;
+}
+
+.icon_content {
+  align-self: center;
+  text-align: center;
+  font-size: 0.8em;
+  color: $DARK_HENDRICKSON;
+}
+
 .ratio {
   width: 1.2em;
   height: 1.2em;
@@ -43,7 +58,8 @@
 .name {
   order: 3;
   flex-grow: 1;
-  vertical-align: text-bottom;
+
+  // vertical-align: text-bottom;
 }
 
 .streamItem {
